--- a/pages/events.html
+++ b/pages/events.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <section>
-        <img src="" alt="event images">
+        <img src="/images/event-img.jpeg" alt="event images">
       <h1>Raw Sienna Hackerton Coming Up Eevents</h1>
       <table>
         <tr>
